--- a/includes/styles.css
+++ b/includes/styles.css
@@ -240,10 +240,9 @@ main {
         width: 75%;
     }
     /*-----ADMIN PAGE-----*/
-    #uTable{
+    #uTable, #vadTable{
         color: #fff;
     }
-
 
     #sideNavi .nav-pills {
         position: absolute;
@@ -323,6 +322,17 @@ main {
         font-size: 20px;
         margin-right: 15px;
     }
+
+    /*Delete User Button*/
+    #delUserButt{
+        height: 50px;
+        width: 150px;
+        background-color: #6c757d;
+        color: #232323;
+        text-align: center;
+    }
+
+
     /*-----FOOTER-----*/
     footer {
         height: 40px;
