--- a/includes/styles.css
+++ b/includes/styles.css
@@ -492,7 +492,7 @@ main {
 }
 
 .hide{
-    display: none;
+    display: hidden;
 }
 
 #stepTwo{
@@ -504,6 +504,26 @@ main {
 
 #myPage tbody{
     color: #fff;
+}
+
+.lbButt{
+    height: 100%;
+    width: 70%;
+    border-radius: 4px;
+    color: #fff;
+    background-color: #4d4d4d;
+    text-align: center;
+
+}
+
+.lbrow{
+    margin-top: 5%;
+}
+
+.insideLightbox2{
+    height: 100%;
+    width: 100%;
+
 }
 
 
